@@ -1,4 +1,5 @@
 #!/bin/sh
-exec /opt/java/openjdk/bin/java \
+exec /opt/openjdk-19/bin/java \
+  --add-opens java.base/java.lang=ALL-UNNAMED \
   -jar /usr/share/spive-thread-runner/service.jar \
   "$@"
